# linoodle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linoodle.cpp  windows_api.cpp  windows_api.h  windows_library.cpp  windows_library.h
test/: compressed.data  decompressed.data  test.cpp
